# eu-ai-act-dataset

./: .env.example  .gitignore  DATASET_CARD.md.tmpl  DATA_LICENSE  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  validate-pr.yml
gold/: retrieval_eval.yaml
src/eu_ai_act_dataset/: __init__.py  build.py  chunk.py  cli.py  config.py  diff.py  enrich.py  export.py  fetch.py  models.py  publish.py  validate.py
src/eu_ai_act_dataset/parsers/: formex.py
